# wn-tui

./: .gitignore  Cargo.toml  LICENSE.md  README.md  justfile
.github/workflows/: ci.yml
src/: action.rs  app.rs  event.rs  main.rs  tui.rs  wn.rs
src/screen/: group_detail.rs  login.rs  main_screen.rs  mod.rs  profile.rs  settings.rs  user_search.rs
src/widget/: chat_list.rs  input.rs  message_list.rs  mod.rs  popup.rs  status_bar.rs
