[package]
name = "wn-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
chrono = "0.4"
unicode-width = "0.2"
futures = "0.3"
tokio-stream = "0.1"
which = "7"
